# otus-cpp-basic-2022

./: README.md
homework#3/: CMakeLists.txt  README.md  guess-the-number.cpp  guess-the-number.h  high_scores.cpp  play-the-game.cpp
homework-7/: CMakeLists.txt
homework-7/src/: containers.hpp  main.cpp
homework-7/test/: arr_tests.cpp  list_tests.cpp  run_tests.cpp
homework-8/: CMakeLists.txt  topk_words.cpp
project-work/: CMakeLists.txt  book2base-main.cpp  book2base.cpp  book2base.hpp  book_processing.cpp  database.cpp  database.hpp  pugixml.cpp  pugixml.hpp  utils.cpp  utils.h
project-work/data/Библиотека приключений/Abramov Sergey Aleksandrovich/: Dva uzla na polotence.fb2  Letnaya pogoda.fb2  Slozhi tak.fb2  _Grazhdane, vozdushnaya trevoga__.fb2
project-work/data/Библиотека приключений/Afanas'eva Elena/: ne_bud_duroi.ru.fb2
project-work/data/Библиотека приключений/Alekseev Gleb Vasil'evich/: Podzemnaya Moskva.fb2
project-work/data/Библиотека приключений/Alekseev Sergey/: Prishel'ci (Dolina smerti).fb2  Utoli moya pechali.fb2
project-work/data/Библиотека приключений/Alekseev Sergey Trofimovich/: Slovo.fb2
project-work/data/Библиотека приключений/Ananyan Vahtang Stepanovich/: Na beregu Sevana.fb2
project-work/data/Библиотека приключений/Angelov Dimitr/: Kogda cheloveka ne bilo.fb2
project-work/data/Библиотека приключений/Ardamatskiy Vasiliy Ivanovich/: Leningradskaya zima.fb2  Otvetnaya operaciya.fb2  _Ya 11-17_.fb2
project-work/data/Библиотека приключений/Arno Zhorzh/: Plata za strah.fb2
project-work/data/Библиотека приключений/Azov Mark/: Vizit _Dzhaliti_.fb2
project-work/data/Библиотека приключений/Bach Richard/: Biplan.fb2
project-work/data/Библиотека приключений/Bahvalov Aleksandr/: ПРОЧТИ МЕНЯ.txt
project-work/data/Библиотека приключений/Begli Desmond/: Pari dlya prostakov.fb2  Pis'mo Vivero.fb2  Tigr snegov.fb2  Uragan Uayetta.fb2  Visokaya citadel'.fb2  Zolotoy kil'.fb2
project-work/data/Библиотека приключений/Belov Ruslan/: Smert' za hrebtom.fb2
project-work/data/Библиотека приключений/Belyaev Aleksandr Pavlovich/: Vzletnaya polosa.fb2
project-work/data/Библиотека приключений/Benua P'er/: Doroga gigantov.fb2  Solenoe ozero.fb2
project-work/data/Библиотека приключений/Berrouz Edgar Rays/: Bezumniy korol'.fb2
project-work/data/Библиотека приключений/Bridzhs V/: Chelovek niotkuda.fb2
project-work/data/Библиотека приключений/Burcev Viktor/: Gimalayskiy zigzag.fb2  Zerkalo Iblisa.fb2
project-work/data/Библиотека приключений/Burlak Vadim Nikolaevich/: Sled iz taygi.fb2
project-work/data/Библиотека приключений/Bussenar Lui Anri/: Bessrebrenik sredi zheltih d'yavolov.fb2  Bez grosha v karmane.fb2  Desyat' millionov Krasnogo Opossuma.fb2  Gvianskie robinzoni.fb2  Kanadskie ohotniki.fb2  Meksikanskaya nevesta.fb2  Neobiknovennie priklyucheniya Sinego cheloveka.fb2  Ohotniki za kauchukom.fb2  Pilayuschiy ostrov.fb2  Pod Yuzhnim krestom.fb2  Pohititeli brilliantov.fb2  Priklyucheniya vozduhoplavateley.fb2  S Krasnim Krestom.fb2  Sredi fakirov.fb2  Za desyat'yu millionami k rizhemu opossumu.fb2  Zheleznaya ruka.fb2
project-work/data/Библиотека приключений/Chandler Reymond/: Visokoe okno.fb2
project-work/data/Библиотека приключений/Chayld Linkol'n/: Mech karayuschiy.fb2
project-work/data/Библиотека приключений/Chevichelov Dmitriy Ivanovich/: Ostrov na karte ne oboznachen.fb2
(+710 files in other folders)
